// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Eligibility > should render eligible status 1`] = `
<div>
  <div
    class="flex flex-col rounded-lg border bg-white shadow-sm gap-2 p-0"
    data-slot="card"
  >
    <div
      class="@container/card-header auto-rows-min grid-rows-[auto_auto] gap-2 px-6 has-data-[slot=card-action]:grid-cols-[1fr_auto] [.border-b]:pb-6 flex w-full items-center py-2 bg-green-50"
      data-slot="card-header"
    >
      <h3
        class="font-lato font-bold mb-0 flex w-full items-center justify-between text-base"
        data-slot="card-title"
      >
        <span>
          eligibility.eligible.title
        </span>
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-circle-check text-green-700"
          data-icon="circle-check"
          data-prefix="fas"
          role="img"
          viewBox="0 0 512 512"
        >
          <path
            d="M256 512a256 256 0 1 1 0-512 256 256 0 1 1 0 512zM374 145.7c-10.7-7.8-25.7-5.4-33.5 5.3L221.1 315.2 169 263.1c-9.4-9.4-24.6-9.4-33.9 0s-9.4 24.6 0 33.9l72 72c5 5 11.8 7.5 18.8 7s13.4-4.1 17.5-9.8L379.3 179.2c7.8-10.7 5.4-25.7-5.3-33.5z"
            fill="currentColor"
          />
        </svg>
      </h3>
    </div>
    <div
      class="px-6 space-y-6 pb-2"
      data-slot="card-content"
    >
      <p>
        eligibility.eligible.description
      </p>
      eligibility.eligible.instructions
    </div>
  </div>
</div>
`;

exports[`Eligibility > should render eligible-proof status 1`] = `
<div>
  <div
    class="flex flex-col rounded-lg border bg-white shadow-sm gap-2 p-0"
    data-slot="card"
  >
    <div
      class="@container/card-header auto-rows-min grid-rows-[auto_auto] gap-2 px-6 has-data-[slot=card-action]:grid-cols-[1fr_auto] [.border-b]:pb-6 flex w-full items-center py-2 bg-amber-50"
      data-slot="card-header"
    >
      <h3
        class="font-lato font-bold mb-0 flex w-full items-center justify-between text-base"
        data-slot="card-title"
      >
        <span>
          eligibility.eligible-proof.title
        </span>
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-triangle-exclamation text-amber-700"
          data-icon="triangle-exclamation"
          data-prefix="fas"
          role="img"
          viewBox="0 0 512 512"
        >
          <path
            d="M256 0c14.7 0 28.2 8.1 35.2 21l216 400c6.7 12.4 6.4 27.4-.8 39.5S486.1 480 472 480L40 480c-14.1 0-27.2-7.4-34.4-19.5s-7.5-27.1-.8-39.5l216-400c7-12.9 20.5-21 35.2-21zm0 352a32 32 0 1 0 0 64 32 32 0 1 0 0-64zm0-192c-18.2 0-32.7 15.5-31.4 33.7l7.4 104c.9 12.5 11.4 22.3 23.9 22.3 12.6 0 23-9.7 23.9-22.3l7.4-104c1.3-18.2-13.1-33.7-31.4-33.7z"
            fill="currentColor"
          />
        </svg>
      </h3>
    </div>
    <div
      class="px-6 space-y-6 pb-2"
      data-slot="card-content"
    >
      <p>
        eligibility.eligible-proof.description
      </p>
      <p>
        eligibility.eligible-proof.continue
      </p>
      eligibility.eligible-proof.instructions
    </div>
  </div>
</div>
`;

exports[`Eligibility > should render ineligible status 1`] = `
<div>
  <div
    class="flex flex-col rounded-lg border bg-white shadow-sm gap-2 p-0"
    data-slot="card"
  >
    <div
      class="@container/card-header auto-rows-min grid-rows-[auto_auto] gap-2 px-6 has-data-[slot=card-action]:grid-cols-[1fr_auto] [.border-b]:pb-6 flex w-full items-center py-2 bg-red-50"
      data-slot="card-header"
    >
      <h3
        class="font-lato font-bold mb-0 flex w-full items-center justify-between text-base"
        data-slot="card-title"
      >
        <span>
          eligibility.ineligible.title
        </span>
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-circle-xmark text-red-700"
          data-icon="circle-xmark"
          data-prefix="fas"
          role="img"
          viewBox="0 0 512 512"
        >
          <path
            d="M256 512a256 256 0 1 0 0-512 256 256 0 1 0 0 512zM167 167c9.4-9.4 24.6-9.4 33.9 0l55 55 55-55c9.4-9.4 24.6-9.4 33.9 0s9.4 24.6 0 33.9l-55 55 55 55c9.4 9.4 9.4 24.6 0 33.9s-24.6 9.4-33.9 0l-55-55-55 55c-9.4 9.4-24.6 9.4-33.9 0s-9.4-24.6 0-33.9l55-55-55-55c-9.4-9.4-9.4-24.6 0-33.9z"
            fill="currentColor"
          />
        </svg>
      </h3>
    </div>
    <div
      class="px-6 space-y-6 pb-2"
      data-slot="card-content"
    >
      <p>
        eligibility.ineligible.description
      </p>
    </div>
  </div>
</div>
`;
